--- a/MÓDULO6/MÓDULO6_MONTILLA_PATÓN_YOLANDA.tex
+++ b/MÓDULO6/MÓDULO6_MONTILLA_PATÓN_YOLANDA.tex
@@ -4,6 +4,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{siunitx}
+\usepackage{cite}
 
 
 \begin{document}
@@ -45,7 +46,12 @@ de ambos meses “tipo” (media de los años 2010 a 2019), se ha analizado sepa
 entre los días 14 de marzo y 30 de abril, comparado con el correspondiente al promedio de la
 década anterior, en el conjunto de las redes y en la estación orientada al tráfico más significativa
 de cada ciudad, por su mayor concentración de NO2 y/o por su posición central.
-IMAGEN ZONA DE ESTUDIO
+\begin{figure}
+\centering
+\includegraphics[width=6cm, height=6cm]{zonaestudio}
+\caption{Zona de estudio}
+\label{Figura1}
+\end{figure}
 \ \ \ \ \ \ \ \ \ \ \ \ \ \ \   \ \ \ \ \ \ \\ \ \ \ \ \ \ \ \ \ \ \ \ \ \   \ \ \ \ \ \ \\ \ \ \ \ \ \ \ \ \ \ \ \ \ \   \ \ \ \ \ \ \\ \ \ \ \ \ \ \ \ \ \ \ RESULTADOS
 \\  Como resultado de las medidas de confinamiento social y limitación de la movilidad derivadas
 del estado de alarma, en el periodo comprendido entre el 14 de marzo y el 30 de abril de 2020
@@ -53,7 +59,12 @@ se ha producido una reducción drástica de los niveles de NO2 en las redes de m
 ciudades consideradas, por comparación con el promedio del mismo periodo de los diez años
 anteriores. En el conjunto de las 129 estaciones evaluadas, la reducción se cuantifica en un 58\%
 de los niveles habituales.
-TABLA 2 VARIACION DE LOS NIVELES DOC AZUL
+\begin{figure}
+\centering
+\includegraphics[width=15cm, height=15cm]{tabla}
+\caption{Concentraciones NO2}
+\label{Figura1}
+\end{figure}
 \\ El valor medio de NO2 de las redes urbanas entre el 14 de marzo y el 30 de abril de 2020 ha sido de 11 \si\micro\ g/m3 mientras el equivalente para el período 2010-2019 fue de 26 \si\micro\ g/m3. En el caso de las estaciones de tráfico más significativas de cada ciudad, la media de NO2 entre los pasados 14 de marzo y 30 de abril ha sido de 13 \si\micro\ g/m3, mientras en el período 2010-2019 fue de 31 \si\micro\ g/m3.
 Los niveles de NO2 registrados durante el estado de alarma son los más bajos para la segunda
 quincena de marzo y el mes de abril de la última década, en todas las ciudades analizadas.
@@ -140,5 +151,16 @@ financiación de urgencia.
 implementar medidas que favorezcan el transporte público.
 \item Moratoria en la ampliación de autopistas y autovías, destinando su presupuesto para
 implementar medidas que favorezcan el transporte público.
+\end{itemize}
+\newpage
+BIBLIOGRAFÍA
+\bibliography{bibliografia}
+\bibliographystyle{plain}
+\cite[en2020efectos]
+\cite[cantos2020aspectos]
+ \\ RECURSOS
+\begin{itemize}
+\item https://www.easp.es/web/coronavirusysaludpublica/efecto-de-la-pandemia-de-covid-19-en-la-calidad-del-aire-impacto-en-la-salud-respiratoria/
+\item https://www.easp.es/web/coronavirusysaludpublica/el-clima-y-la-contaminacion-modifican-la-transmision-del-sars-cov-2/
 \end{itemize}
 \end{document}
